third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/float/exp-double-e-1.stderr
TOML parse error at line 1, column 20
  |
1 | exp-double-e-1 = 1ee2
  |                    ^
invalid floating-point number
